--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ main{
 .feature-images{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    gap: 5px;
 }
 
 .feature-images>img{
@@ -197,6 +198,13 @@ main{
     border-radius: 8px;
 }
 
+/* add hover effect */
+
+.award:hover{
+    transform: scaleX(1.1);
+    transform: scaleY(1.1);
+}
+
 .award>h3{
     font-size: 30px;
     font-weight: 600;
@@ -225,6 +233,30 @@ main{
     height: 40px;
 }
 
+/* bonus section */
+
+.bonus-title{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.bonus-team-container{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+}
+
+.bonus-item{
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 14px;
+}
+
+.bonus-item>img{
+    width: 100%;
+    height: 256px;
+    border-radius: 5px;
+}
 /* footer design */
 
 footer{
@@ -280,6 +312,10 @@ footer{
         flex-direction: column;
         gap: 20px;
     }
+    .bonus-team-container{
+        grid-template-columns: repeat(1,1fr);
+        gap: 10px;
+    }
     footer{
         text-align: center;
     }
@@ -294,5 +330,9 @@ footer{
     .sponsor-logo{
         gap: 35px;
         flex-wrap: wrap;
+    }
+    .bonus-team-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
     }
 }
